--- a/package.json
+++ b/package.json
@@ -20,6 +20,14 @@
     "lint:check": "eslint . && npx tsc --noEmit",
     "lint:fix": "eslint . --fix"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pipech/refine-frappe-provider.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pipech/refine-frappe-provider/issues"
+  },
+  "homepage": "https://github.com/pipech/refine-frappe-provider",
   "author": "pipech@gmail.com",
   "license": "MIT",
   "devDependencies": {
