--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "npm:eslint-plugin-i@^2.29.1",
     "eslint-plugin-perfectionist": "^2.5.0",
+    "globals": "^15.0.0",
     "jest": "^29.7.0",
     "nock": "^13.5.4",
     "tough-cookie": "^4.1.3",
